# FlamAssignment

./: README.md  settings.gradle.kts
app/: CMakeLists.txt  build.gradle  build.gradle.kts
app/src/androidTest/java/com/example/edgeviewer/: ExampleInstrumentedTest.kt
app/src/androidTest/java/net/jonreynolds/androidopencvcamera/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/com/example/edgeviewer/: MainActivity.java
app/src/main/java/com/example/edgeviewer/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/java/net/zoyaaa02/androidopencvcamera/: MyGLSurfaceView.java
app/src/main/java/net/zoyaaa02/androidopencvcamera/androidopencvcamera/: CameraActivity.java
app/src/main/res/layout/: activity.xml  activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/example/edgeviewer/: ExampleUnitTest.kt
app/src/test/java/net/jonreynolds/androidopencvcamera/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
